[kitty] Change theme

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -14,8 +14,9 @@ initial_window_height 24c
 # background_opacity 0.90
 # background_blur 1
 
-# Theme (from kitty-themes)
-include ./tokyonight_storm.conf
+# Theme
+include ./gruvbox_dark.conf
+include ./gruvbox_dark_hard.conf
 
 # Split screen layout
 enabled_layouts tall:bias=50;full_size=1;mirrored=false
