[kitty] Hide title bar

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -17,6 +17,7 @@ initial_window_height 24c
 # Theme
 include ./gruvbox_dark.conf
 include ./gruvbox_dark_hard.conf
+include ./hide_title_bar.conf
 
 # Split screen layout
 enabled_layouts tall:bias=50;full_size=1;mirrored=false
