--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,6 +1,7 @@
 # Font settings
 font_family JetBrainsMono Nerd Font
 font_size 13.0
+disable_ligatures never
 
 # Terminal bell
 enable_audio_bell no
