[kitty] Set splits layout

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -17,7 +17,7 @@ include ./gruvbox_dark_hard.conf
 include ./hide_title_bar.conf
 
 # Split screen layout
-enabled_layouts tall:bias=50;full_size=1;mirrored=false
+enabled_layouts splits
 
 # Key mappings to move between windows
 map ctrl+shift+h neighboring_window left
