[kitty] Update keybinds

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -19,9 +19,20 @@ include ./hide_title_bar.conf
 # Split screen layout
 enabled_layouts splits
 
+# Key mappings to move windows around
+map super+shift+h move_window left
+map super+shift+j move_window down
+map super+shift+k move_window up
+map super+shift+l move_window right
+
 # Key mappings to move between windows
-map ctrl+shift+h neighboring_window left
-map ctrl+shift+l neighboring_window right
-map ctrl+shift+k neighboring_window up
-map ctrl+shift+j neighboring_window down
+map super+h neighboring_window left
+map super+l neighboring_window right
+map super+k neighboring_window up
+map super+j neighboring_window down
+
+# New splits and tabs with the current working directory
+map super+t new_tab_with_cwd
+map super+d new_window_with_cwd
+map super+shift+d launch --cwd=current --location=hsplit
 
