[kitty] Add quit when no windows behaviour

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -36,3 +36,5 @@ map super+t new_tab_with_cwd
 map super+d new_window_with_cwd
 map super+shift+d launch --cwd=current --location=hsplit
 
+# Quit kitty when no windows are open
+macos_quit_when_last_window_closed yes
