[kitty] Set powerline tab bar style

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -38,3 +38,6 @@ map super+shift+d launch --cwd=current --location=hsplit
 
 # Quit kitty when no windows are open
 macos_quit_when_last_window_closed yes
+
+# Tab bar style
+tab_bar_style powerline
