--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -41,3 +41,6 @@ macos_quit_when_last_window_closed yes
 
 # Tab bar style
 tab_bar_style powerline
+
+# Hide title in menu bar
+macos_show_window_title_in window
