[kitty] Fix title bar colour

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -44,7 +44,7 @@ macos_quit_when_last_window_closed yes
 tab_bar_style powerline
 
 # Merge title bar with the background
-# macos_titlebar_color background
+macos_titlebar_color background
 
 # Hide title in menu bar
 macos_show_window_title_in window
